updated python basics notebook

--- a/python-basics.ipynb
+++ b/python-basics.ipynb
@@ -88,9 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = 1\n",
@@ -158,13 +156,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = []\n",
-    "print type(a)"
+    "type(a)"
    ]
   },
   {
@@ -408,7 +404,8 @@
    },
    "outputs": [],
    "source": [
-    "#Define your function here"
+    "def makearray(x):\n",
+    "    return [x]"
    ]
   },
   {
@@ -447,9 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This is the de facto way to import NumPy. You probably don't want to write numpy.whatever every time\n",
@@ -482,9 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "We can also easily create ordered numerical lists!"
@@ -546,7 +539,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# The identity matrix of given size\n",
@@ -556,7 +551,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A matrix with the given vector on the diagonal\n",
@@ -576,7 +573,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# An array with a given shape full of a specified value\n",
@@ -586,7 +585,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# A random (standard normal) array with the given shape\n",
@@ -606,12 +607,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your answer here"
+    "np.diag(np.arange(20)) + np.eye(20)"
    ]
   },
   {
@@ -745,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
+    "x = np.zeros((10))\n",
     "print(x)"
    ]
   },
@@ -762,7 +761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
+    "x[5] = 5\n",
     "print(x)"
    ]
   },
@@ -779,7 +778,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
+    "x = np.arange(10, 50)\n",
     "print(x)"
    ]
   },
@@ -796,7 +795,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
+    "x = x[::-1]\n",
     "print(x)"
    ]
   },
@@ -813,7 +812,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
+    "Z = np.arange(9).reshape(3,3)\n",
     "print(Z)"
    ]
   },
@@ -830,7 +829,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
+    "Z = np.random.randn(3,3,3)\n",
     "print(Z)"
    ]
   },
@@ -844,13 +843,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.sum(Z))\n",
+    "print(np.mean(Z))\n",
+    "print(np.std(Z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# YOUR CODE HERE"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -870,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
